--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <title>React App</title>
+    <title>Twitter Clone Project</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
